# python_testing

unit_01/tests/: test_capitalize.py
unit_02/: capitalize.py
unit_02/tests/: test_capitalize.py
unit_03/: example.py  pyproject.toml
unit_03/tests/: test_example.py  test_unit_03.py
unit_04/: readme
unit_04/tests/: test_unit_04.py
